--- a/Signals/index.html
+++ b/Signals/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World 2</h1>
-<p>This is test 3</p>
+<h1>Lost Souls...? Go to our homepage</h1>
 </body>
 </html>
