--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World 2</h1>
-<h1>Comming Soon...!</h1>
+<h1>Hey...</h1>
+<h1>We are Comming Soon...!</h1>
 </body>
 </html>
