--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <html><head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <title>ezeetrading.in</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="We at EzeeTrading.in receives lot of requests by our followers. This tool is a part of out Ease of Trading Toolset... So that entry level Retail Participants as well as much more experienced Traders can enjoy seamless Trading experience without looking into technicalities themselves.">
+	<meta name="keywords" content="kite, zerodha, upstox, india, discount broker, semi-automated, trading, apis, free api, automated trading apis, stock trading apis, rest api stock market, nse trading api, html5 trading platform, best trading platform, best web trading platform, trade plugin, stock trade button">
+	<link rel="image_src" href="Trade_files/logo.png">
+
 <meta name="robots" content="index,nofollow">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
