--- a/404.html
+++ b/404.html
@@ -81,7 +81,7 @@ background-size:231px 231px;
 <body>
 <div style="position: absolute; z-index: 0; background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%;" id="fullscreen">
 <div id="messagebox">
-<h1>Lost?</h1>
+<h1>Ah..! Lost?</h1>
 <h2>Just try again and it should be fine...!</h2>
 </div>
 <div style="left: 0px; top: 0px; overflow: hidden; margin: 0px; padding: 0px; height: 654px; width: 1349px; z-index: -999998; position: absolute;" class="backstretch"><img style="position: absolute; margin: 0px; padding: 0px; border: medium none; width: 1349px; height: 1011.75px; max-height: none; max-width: none; z-index: -999999; left: 0px; top: -178.875px;" src="Index_files/construction-bg.jpg"></div></div>
