--- a/404.html
+++ b/404.html
@@ -82,7 +82,7 @@ background-size:231px 231px;
 <div style="position: absolute; z-index: 0; background: rgba(0, 0, 0, 0) none repeat scroll 0% 0%;" id="fullscreen">
 <div id="messagebox">
 
-<h1>Lost ?</h1>
+<h1>Some Issue..?</h1>
 
 <h2>Just try again and it should be fine...!</h2>
 </div>
