--- a/Signals/index.html
+++ b/Signals/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Lost Souls...? Go to our homepage</h1>
+<h1>Lost Somewhere...? Go to our homepage</h1>
 </body>
 </html>
