--- a/Tools/Ezeetrading.html
+++ b/Tools/Ezeetrading.html
@@ -282,7 +282,7 @@ function placeBO2(typ,order_type){
 			var Quantity = Math.max(1,Math.round(TargetAmount / Target_pips))
 			if (CashFutures == "NFO") { Quantity = parseInt(LotSize)}
 
-			if (CashFutures == "NFO") { Symbol += "19DECFUT"}
+			if (CashFutures == "NFO") { Symbol += "20JANFUT"}
 			if (CashFutures == "NFO") { Exchange = "NFO"}
 			
 			kite.add({
