--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
 						 Get the alert message in your mobile daily at fix time and click to trade with SL and Target. Rest of the day free to focus on your office/business work.
 						 This bot identifies Weak Stocks for the day to Sell. Fast and Furious Mode is recommended for those who want less number trades but more accurate ones.
                         </p>
-						<a class="btn btn--primary full-width" href="https://p-y.tm/H-JSFZo">Subscribe Now</a>
-						<a class="btn btn--primary full-width" href="https://telegra.ph/Ezee-Sell-bot---Fast-and-Furious-Mode-10-12">Past Performance</a>
+						<a class="btn btn--primary full-width" href="https://p-y.tm">Subscribe Now</a>
                     </div>
                 </div>
 
@@ -205,8 +204,7 @@
 						 Get the alert message in your mobile daily at fix time and click to trade with SL and Target. Rest of the day free to focus on your office/business work.
 						 This bot identifies Weak Stocks for the day to Sell. Slow and Steady Mode is recommended for those who want more number trades for better averaging.
                         </p>
-						<a class="btn btn--primary full-width" href="https://p-y.tm/H-JSFZo">Subscribe Now</a>
-						<a class="btn btn--primary full-width" href="https://telegra.ph/Ezee-Sell-bot---Slow-and-Steady-Mode-10-12">Past Performance</a>
+						<a class="btn btn--primary full-width" href="https://p-y.tm">Subscribe Now</a>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
@@ -216,8 +214,7 @@
 						 Get the alert message in your mobile daily at fix time and click to trade with SL and Target. Rest of the day free to focus on your office/business work.
 						 This bot identifies Weak Stocks for the day to Sell. Moderate Mode is recommended for those who prefer to have moderate number of trades(neither too many nor too less).
                         </p>
-						<a class="btn btn--primary full-width" href="https://p-y.tm/H-JSFZo">Subscribe Now</a>
-						<a class="btn btn--primary full-width" href="https://telegra.ph/Ezee-Sell-bot---Moderate-Mode-10-12">Past Performance</a>
+						<a class="btn btn--primary full-width" href="https://p-y.tm">Subscribe Now</a>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="4" data-aos="fade-up">
@@ -226,8 +223,7 @@
                         <p>
 						 Suggested for active Traders, as it generates trades throughout the day, whenever a proper Breakout with confirmation is found. It has historically captured many big intraday moves. If you like trend Following, you must have this.
                         </p>
-						<a class="btn btn--primary full-width" href="https://p-y.tm/H-JSFZo">Subscribe Now</a>
-						<a class="btn btn--primary full-width" href="https://telegra.ph/Special-Breakouts---Past-Performance-11-22">Past Performance</a>
+						<a class="btn btn--primary full-width" href="https://p-y.tm">Subscribe Now</a>
                     </div>
                 </div>
 
@@ -264,7 +260,7 @@
                 <div class="service-text">
                     <h3 class="h4">1. New Traders Special</h3>
 					<div class="item-folio__thumb">
-						<a href="https://telegra.ph/Ezee-Stock-Selection-Filter-for-Manual-traders-10-25" class="thumb-link" title="Lamp" data-size="1050x700">
+						<a href="#" class="thumb-link" title="Lamp" data-size="1050x700">
 							<img src="images/New-Traders.png"
 								 alt="">
 						</a>
@@ -274,7 +270,7 @@
 					This set of 3 Videos of step by step development of an effective Strategy, not only gives you a good strategy at the end of the course, but also teach you the approach of developing a good Strategy.
 					<!--90% of New Traders dont have a reliable strategy, so they are not able to earn well from market.-->
                     </p>
-					<a class="btn btn--primary full-width" href="https://telegra.ph/Ezee-Stock-Selection-Filter-for-Manual-traders-10-25">Know More</a>
+					<a class="btn btn--primary full-width" href="#">Know More</a>
                 </div>
             </div>
 
@@ -282,7 +278,7 @@
                 <div class="service-text">
                     <h3 class="h4">2. One Day Early</h3>
 					<div class="item-folio__thumb">
-						<a href="https://telegra.ph/Isnt-it-good-if-you-can-predict-one-day-before-which-stock-to-Buy-and-which-to-Sell-next-day-11-05" class="thumb-link" title="Lamp" data-size="1050x700">
+						<a href="#" class="thumb-link" title="Lamp" data-size="1050x700">
 							<img src="images/buy-sell-hold.jpg"
 								 alt="">
 						</a>
@@ -294,7 +290,7 @@
 					Also, it identifies stocks to stay away next day.
 					You may clubbed this with your existing strategy to increase accuracy of your own system.
                     </p>
-					<a class="btn btn--primary full-width" href="https://telegra.ph/Isnt-it-good-if-you-can-predict-one-day-before-which-stock-to-Buy-and-which-to-Sell-next-day-11-05">Know More</a>
+					<a class="btn btn--primary full-width" href="#">Know More</a>
                 </div>
             </div>
 
@@ -302,7 +298,7 @@
                 <div class="service-text">
                     <h3 class="h4">3. The Making of Sell bot</h3>
 					<div class="item-folio__thumb">
-						<a href="https://telegra.ph/Making-of-Sell-bot-10-27" class="thumb-link" title="Lamp" data-size="1050x700">
+						<a href="#" class="thumb-link" title="Lamp" data-size="1050x700">
 							<img src="images/New-Traders.png"
 								 alt="">
 						</a>
@@ -310,7 +306,7 @@
 					<br></br>
                     <p>Learn the Strategy behind the trades taken by our Sell bot <br>					
                     </p>
-					<a class="btn btn--primary full-width" href="https://telegra.ph/Making-of-Sell-bot-10-27">Know More</a>
+					<a class="btn btn--primary full-width" href="#">Know More</a>
                 </div>
             </div>
 
@@ -318,7 +314,7 @@
                 <div class="service-text">
                     <h3 class="h4">4. New Traders - Training 2</h3>
 					<div class="item-folio__thumb">
-						<a href="https://telegra.ph/Ezee-Stock-Selection-Filter-for-Manual-traders-10-25" class="thumb-link" title="Lamp" data-size="1050x700">
+						<a href="#" class="thumb-link" title="Lamp" data-size="1050x700">
 							<img src="images/New-Traders.png"
 								 alt="">
 						</a>
@@ -328,7 +324,7 @@
 					This set of 3 Videos of step by step development of an effective Strategy, not only gives you a good strategy at the end of the course, but also teach you the approach of developing a good Strategy.
 					<!--90% of New Traders dont have a reliable strategy, so they are not able to earn well from market.-->
                     </p>
-					<a class="btn btn--primary full-width" href="https://telegra.ph/Ezee-Stock-Selection-Filter-for-Manual-traders-10-25">Know More</a>
+					<a class="btn btn--primary full-width" href="#">Know More</a>
                 </div>
             </div>
 
